--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         <h1>Pokedex</h1>
 
         <ol id="pokemonList" class="pokemons">
-            
+
             <!-- ...... Pokemons here ...... -->
         </ol>
 
         <div class="pagination">
             <button id="loadMoreButton" type="button">
-                Mostrar mais
+                Load More
             </button>
         </div>
     </section>
